[MOD] Editable text on views

--- a/src/FlexTemplate/Views/Home/Components/Capabilities/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Capabilities/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿<section class="c-capabilities">
   <div class="container">
     <div class="GridLex-gap-30 GridLex-gap-20-mdd">
-      <div class="GridLex-grid-noGutter-equalHeight">
+      <div class="GridLex-grid-noGutter-equalHeight" contenteditable="true">
         <div class="GridLex-col-3_sm-3_xs-6_xss-12">
           <div class="featured-icon">
             <div class="icon text-primary">
