--- a/src/FlexTemplate/Views/Home/Components/SearchSlider/CenterWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/SearchSlider/CenterWide.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- start slick hero slider -->
-<div class="slick-hero-slider-wrapper alt-height text-center with-search-form" style="margin-top: -25px;">
+<div class="slick-hero-slider-wrapper alt-height text-center with-search-form" style="margin-top: -25px;" contenteditable="true">
 
     <div class="slider slick-hero-slider slick-slider-center-mode slick-animation">
 
