--- a/src/FlexTemplate/Views/Home/Components/SearchSlider/LeftWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/SearchSlider/LeftWide.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- start slick hero slider -->
-<div class="slick-hero-slider-wrapper alt-height with-search-form">
+<div class="slick-hero-slider-wrapper alt-height with-search-form" contenteditable="true">
 
     <div class="slider slick-hero-slider slick-slider-center-mode slick-animation">
 
