--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -96,5 +96,9 @@
     <script type="text/javascript" src="~/js/ajax.js"></script>
     <script type="text/javascript" src="~/js/admin.js"></script>
     <script type="text/javascript" src="~/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript">CKEDITOR.inlineAll({toolbar:
+    [
+        ['Bold', 'Italic', '-', 'NumberedList', 'BulletedList', '-', 'Link', 'Unlink', '-', 'About']
+    ]});</script>
 </body>
 </html>
