--- a/src/FlexTemplate/Views/Home/Components/OtherCitiesPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/OtherCitiesPlaces/Default.cshtml
@@ -7,8 +7,8 @@
       <span class="user-edit-icon"></span>
       <div class="col-md-8">
         <div class="section-title-02">
-          <h3><span tag="TitleLabelCaption">@Model.Strings["TitleLabelCaption"]</span></h3>
-          <p class="user-edit-text" tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p>
+          <h3><span tag="TitleLabelCaption" contenteditable="true">@Model.Strings["TitleLabelCaption"]</span></h3>
+          <p class="user-edit-text" tag="SubtitleLabelCaption" contenteditable="true">@Model.Strings["SubtitleLabelCaption"]</p>
         </div>
       </div>
     </div>
