--- a/src/FlexTemplate/Views/Home/Components/Search/CenterWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/CenterWide.cshtml
@@ -10,8 +10,8 @@
 
                     <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
-                        <h1 tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1>
-                        <p tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p>
+                        <h1 tag="TitleFirstLabelCaption" contenteditable="true">@Model.Strings["TitleFirstLabelCaption"]</h1>
+                        <p tag="SubtitleLabelCaption" contenteditable="true">@Model.Strings["SubtitleLabelCaption"]</p>
 
                         <div class="home-search-form home-search-form-center">
 
@@ -30,13 +30,13 @@
                                     </select>
                                 </div>
 
-                                <button class="btn btn-primary btn-form" tag="FindButtonCaption">@Model.Strings["FindButtonCaption"]</button>
+                                <button class="btn btn-primary btn-form" tag="FindButtonCaption" contenteditable="true">@Model.Strings["FindButtonCaption"]</button>
 
                             </form>
 
                             <div class="clear"></div>
 
-                            <p class="around-you" tag="EndLabelCaption"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
+                            <p class="around-you" tag="EndLabelCaption" contenteditable="true"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
 
                         </div>
 
