--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShort.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShort.cshtml
@@ -5,8 +5,8 @@
 <div class="hero search-margin-top" style="background-image:url('@Model.Images.First()'); margin-top:-25px;">
     <div class="container">
 
-        <h1 tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1>
-        <p tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p>
+        <h1 tag="TitleFirstLabelCaption" contenteditable="true">@Model.Strings["TitleFirstLabelCaption"]</h1>
+        <p tag="SubtitleLabelCaption" contenteditable="true">@Model.Strings["SubtitleLabelCaption"]</p>
 
         <div class="home-search-form">
 
@@ -32,7 +32,7 @@
 
             <div class="clear"></div>
 
-            <p class="around-you" tag="EndLabelCaption"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
+            <p class="around-you" tag="EndLabelCaption" contenteditable="true"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
 
         </div>
 
