--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShortAnimated.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShortAnimated.cshtml
@@ -19,8 +19,8 @@
 
         <div class="container">
 
-            <h1 tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1>
-            <p tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p>
+            <h1 tag="TitleFirstLabelCaption" contenteditable="true">@Model.Strings["TitleFirstLabelCaption"]</h1>
+            <p tag="SubtitleLabelCaption" contenteditable="true">@Model.Strings["SubtitleLabelCaption"]</p>
 
             <div class="home-search-form mt-20-xs">
 
@@ -46,7 +46,7 @@
 
                 <div class="clear"></div>
 
-                <p class="around-you" tag="EndLabelCaption"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
+                <p class="around-you" tag="EndLabelCaption" contenteditable="true"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
 
             </div>
 
