--- a/src/FlexTemplate/Views/Home/Components/Search/LeftWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftWide.cshtml
@@ -4,8 +4,8 @@
 <!-- start hero-header -->
 <div class="hero alt-height search-margin-top" style="background-image:url('@Model.Images.First()'); margin-top:-25px;">
     <div class="container">
-        <div contenteditable="true" name="ckeditor"><h1 tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1></div>
-        <div contenteditable="true" name="ckeditor"><p tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p></div>
+        <h1 contenteditable="true" tag="TitleFirstLabelCaption">@Model.Strings["TitleFirstLabelCaption"]</h1>
+        <p contenteditable="true" tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p>
 
         <div class="home-search-form">
 
@@ -27,14 +27,11 @@
             </form>
 
             <div class="clear"></div>
-            <div contenteditable="true" name="ckeditor">
-            <p class="around-you" tag="EndLabelCaption">@Model.Strings["EndLabelCaption"]</p>
-            </div>
+            <p contenteditable="true" class="around-you" tag="EndLabelCaption"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
         </div>
 
     </div>
 
 </div>
 <!-- end hero-header -->
-<script type="text/javascript">CKEDITOR.inline('ckeditor',{toolbar: 'Full'});</script>
 }
