--- a/src/FlexTemplate/Views/Home/Components/SearchSlider/RightWide.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/SearchSlider/RightWide.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- start slick hero slider -->
-<div class="slick-hero-slider-wrapper alt-height relative">
+<div class="slick-hero-slider-wrapper alt-height relative" contenteditable="true">
 
     <div class="slider slick-hero-slider slick-slider-center-mode slick-animation">
 
