--- a/src/FlexTemplate/Views/Home/Components/ThisCityPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisCityPlaces/Default.cshtml
@@ -6,8 +6,8 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="section-title-02">
-                        <h3><span tag="TitleLabelCaption">@Model.Strings["TitleLabelCaption"]</span></h3>
-                        <p tag="SubtitleLabelCaption">@Model.Strings["SubtitleLabelCaption"]</p>
+                        <h3><span tag="TitleLabelCaption" contenteditable="true">@Model.Strings["TitleLabelCaption"]</span></h3>
+                        <p tag="SubtitleLabelCaption" contenteditable="true">@Model.Strings["SubtitleLabelCaption"]</p>
                     </div>
                 </div>
             </div>
