--- a/src/FlexTemplate/Views/Admin/Containers.cshtml
+++ b/src/FlexTemplate/Views/Admin/Containers.cshtml
@@ -8,23 +8,37 @@
             {
                 <div class="container" dataId="@container.Id">
                     <h3><span>Контейнер</span> <input id="containerName" class="form-control" type="text" value="@container.Name"></h3>
-                    
+                    @foreach (var local in container.LocalizableStrings)
+                    {
+                        <div class="alias" dataId="@container.Id">
+                            <input class="form-control" type="text" value="@container.Name">
+                            <select class="custom-select languages">
+                                @foreach (var lang in Model.Languages)
+                                {
+                                    <option dataId="@lang.Id">@lang.ShortName</option>
+                                }
+                            </select>
+                            <button class="btn btn-primary btn-form admin-button-alias-remove">Remove localization</button>
+                        </div> 
+                    }
+
+                    @foreach (var templates in container.ContainerTemplates)
+                    {
+                        <div class="alias" dataId="@container.Id">
+                            <input class="form-control" type="text" value="@container.Name">
+                           
+                            <button class="btn btn-primary btn-form admin-button-alias-remove">Remove template</button>
+                        </div>
+                    }
+
+                    <div class="image">
+                        <img src=@Model.Photo alt="Hot Item">
+                    </div>
+
                     <button class="btn btn-primary btn-form admin-button admin-button-remove-category">Remove container</button>
-                </div>}
+                </div>
+            }
         </div>
         <button class="btn btn-primary btn-form admin-button admin-button-add-category">Add container</button>
     }
 </div>
-
-<script>
-	// window.onload = function() {
-	// 	$.ajax(GET_LANGUAGES, {
- //    	success: function() {
- //    		$()
- //    	},
-	//     error: function(error) {
-	//       console.log('error ' + error);
-	//     }
-	// 	});
-	// };
-</script>
