--- a/src/FlexTemplate/Views/Admin/Pages.cshtml
+++ b/src/FlexTemplate/Views/Admin/Pages.cshtml
@@ -2,28 +2,34 @@
 @model FlexTemplate.ViewModels.AdminController.AdminPagesViewModel
 @if(Model != null)
 {
-	<div class="c-pages container admin">
-    @foreach (Page page in Model.Pages)
-    {
-    	<div class="page" dataId="@page.Id">
-				<h4><span>Назва сторінки у вікні</span> <input id="pageNameTitle" class="form-control" type="text" value="@page.Title"></h4>
-				<div class="container-components">
-					<h4>Порядок компонентів</h4>
-				    <ul id="draggablePanelList" class="component-list list-unstyled">
-				        @foreach (PageContainerTemplate component in page.PageContainerTemplates)
-				        {
-				            <li class="alert alert-info component clearfix" dataId="@component.ContainerTemplateId">
-				                <button class="btn btn-primary btn-form admin-button-remove-component">Remove</button>
-				                <span>@component.ContainerTemplate.Container.Name - @component.ContainerTemplate.TemplateName</span>
-				            </li>
-				        }
-				    </ul>
-                    <button class="btn btn-primary btn-form admin-button-add-component">Add component</button>
-				</div>
-        <button class="btn btn-primary btn-form admin-button-pages-save">Save page</button>
-    	</div>
-    }
-	</div>
+<div class="c-pages container admin">
+@foreach (Page page in Model.Pages)
+{
+    <div class="page" dataId="@page.Id">
+			<h4><span>Назва сторінки у вікні</span> <input id="pageNameTitle" class="form-control" type="text" value="@page.Title"></h4>
+			<div class="container-components">
+				<h4>Порядок компонентів</h4>
+				<ul id="draggablePanelList" class="component-list list-unstyled">
+				    @foreach (PageContainerTemplate component in page.PageContainerTemplates)
+                    {
+                        <li class="alert alert-info component clearfix">
+                            <select size="1" name="component[]" class="custom-select">
+                                <option selected="selected" dataId="@component.ContainerTemplate.Id">@component.ContainerTemplate.Container.Name - @component.ContainerTemplate.TemplateName</option>
+                                @foreach (ContainerTemplate containerTemplate in Model.Containers.Where(c => c.AvailableContainers.Any(ac => ac.PageId == page.Id)).SelectMany(c => c.ContainerTemplates))
+                                {
+                                    <option dataId="@containerTemplate.Id">@containerTemplate.Container.Name - @containerTemplate.TemplateName</option>
+                                }
+                            </select>
+                            <button class="btn btn-primary btn-form admin-button-remove-component">Remove</button>
+                        </li>
+                    }
+				</ul>
+                <button class="btn btn-primary btn-form admin-button-add-component">Add component</button>
+			</div>
+    <button class="btn btn-primary btn-form admin-button-pages-save">Save page</button>
+    </div>
+}
+</div>
 }
 
 <script>
