--- a/src/FlexTemplate/Views/Home/Components/ThisCityPlace/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisCityPlace/Default.cshtml
@@ -1,30 +1,35 @@
-﻿@model FlexTemplate.ViewModels.HomeController.ThisCityPlaceViewModel
+﻿@using FlexTemplate.Entities
+@model FlexTemplate.ViewModels.HomeController.ThisCityPlaceViewModel
 @if (Model != null)
 {    
     <div class="GridLex-col-3_sm-4_xs-6_xss-12">
         <div class="restaurant-grid-item">
-            <a href="/Home/Place">
+            <a href="@Url.Action("Place", "Home", new {id = Model.PlaceId})">
                 <div class="image">
-                    <img src=@Model.PhotoPath alt="Image" />
-                </div>
-                <div class="content">
-                    <h5>@Model.Name</h5>
-                    <p class="location"><i class="fa fa-map-marker"></i>@Model.Address</p>
-                    <div class="rating-wrapper">
-                        <div class="rating-item">
-                            <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="@Model.Stars" />
-                        </div>
-                        <span class="texting">(@Model.ReviewsCount reviews)</span>
-                    </div>
-                                  
-                    <p class="cuisine">Кухні:
-                    @foreach (var category in Model.Categories)
-                    {
-                        <span>@category</span>
-                    }
-                    </p>
+                    <img src="@Model.PhotoPath" alt="Image" />
                 </div>
             </a>
+            <div class="content">
+                <a href="@Url.Action("Place", "Home", new {id = Model.PlaceId})">
+                    <h5>@Model.Name</h5>
+                </a>
+                <p class="location"><i class="fa fa-map-marker"></i>@Model.Address</p>
+                <div class="rating-wrapper">
+                    <div class="rating-item">
+                        <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="@Model.Stars"/>
+                    </div>
+                    <span class="texting">(@Model.ReviewsCount reviews)</span>
+                </div>
+
+                <p class="cuisine">Кухні:
+                    @foreach (Category category in Model.Categories)
+                    {
+                        <a href="@Url.Action("Places", "Home", new {categories = new int[]{category.Id}})">
+                            <span>@category.Name</span>
+                        </a>
+                    }
+                </p>
+            </div>
         </div>
     </div>
 }
