--- a/src/FlexTemplate/Views/Home/Place.cshtml
+++ b/src/FlexTemplate/Views/Home/Place.cshtml
@@ -1296,42 +1296,8 @@
 
                     </div>
 
-                    <div id="detail-content-sticky-nav-03" class="detail-content-section clearfix">
-
-                        <div class="section-title-02">
-                            <h3><span>Photo</span></h3>
-                        </div>
-
-                        <div id="detail-food-photo"></div>
-
-                        <div class="clear mb-15"></div>
-
-                    </div>
-
-                    <div id="detail-content-sticky-nav-04" class="detail-content-section clearfix">
-
-                        <div class="section-title-02">
-                            <h3><span>Location</span></h3>
-                        </div>
-
-                        <div class="map-holder">
-
-                            <div id="hotel-detail-map" data-lat="25.19739" data-lon="55.28821" style="width: 100%; height: 480px;"></div>
-
-                            <div class="infobox-wrapper">
-                                <div id="infobox">
-                                    <div class="infobox-inner">
-
-                                        <div class="font500 font12">We Are Here</div>
-
-                                    </div>
-
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
+                    @await Component.InvokeAsync("ThisPlacePhoto")
+                    @await Component.InvokeAsync("ThisPlaceLocation")
 
                 </div>
 
@@ -1453,111 +1419,7 @@
 
         </div>
 
-        <div class="row mt-30">
-
-            <div class="col-md-12">
-
-                <div class="section-title-02">
-
-                    <h3><span>You may also like:</span></h3>
-
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="GridLex-gap-30">
-
-            <div class="GridLex-grid-noGutter-equalHeight">
-
-                <div class="GridLex-col-3_sm-4_xs-6_xss-12">
-                    <div class="restaurant-grid-item">
-                        <a href="#">
-                            <div class="image">
-                                <img src="images/restaurant/01.jpg" alt="Image" />
-                            </div>
-                            <div class="content">
-                                <h5>The Smokin' Pug</h5>
-                                <p class="location"><i class="fa fa-map-marker"></i> 88 Thanon Surawong, Si Phraya, Bang Rak </p>
-                                <div class="rating-wrapper">
-                                    <div class="rating-item">
-                                        <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
-                                    </div>
-                                    <span class="texting"> (27 reviews)</span>
-                                </div>
-                                <p class="cuisine">Cuisine: <span>Italian</span> <span>Seafood</span> <span>Bistro</span></p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="GridLex-col-3_sm-4_xs-6_xss-12">
-                    <div class="restaurant-grid-item">
-                        <a href="#">
-                            <div class="image">
-                                <img src="images/restaurant/02.jpg" alt="Image" />
-                            </div>
-                            <div class="content">
-                                <h5>J'AIME by Jean-Michel Lorain</h5>
-                                <p class="location"><i class="fa fa-map-marker"></i> 105 Soi Sathon 1, Thung Maha Mek, Sathon</p>
-                                <div class="rating-wrapper">
-                                    <div class="rating-item">
-                                        <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
-                                    </div>
-                                    <span class="texting"> (27 reviews)</span>
-                                </div>
-                                <p class="cuisine">Cuisine: <span>Western</span> <span>French</span></p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="GridLex-col-3_sm-4_xs-6_xss-12">
-                    <div class="restaurant-grid-item">
-                        <a href="#">
-                            <div class="image">
-                                <img src="images/restaurant/03.jpg" alt="Image" />
-                            </div>
-                            <div class="content">
-                                <h5>DID - Dine in the Dark </h5>
-                                <p class="location"><i class="fa fa-map-marker"></i> 250 Sukhumvit Rd, Bangkok</p>
-                                <div class="rating-wrapper">
-                                    <div class="rating-item">
-                                        <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
-                                    </div>
-                                    <span class="texting"> (27 reviews)</span>
-                                </div>
-                                <p class="cuisine">Cuisine: <span>Italian</span> <span>Seafood</span> <span>Bistro</span></p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="GridLex-col-3_sm-4_xs-6_xss-12">
-                    <div class="restaurant-grid-item">
-                        <a href="#">
-                            <div class="image">
-                                <img src="images/restaurant/04.jpg" alt="Image" />
-                            </div>
-                            <div class="content">
-                                <h5>JP French Restaurant </h5>
-                                <p class="location"><i class="fa fa-map-marker"></i> 59/1 sukhumvit soi 31(soi sawadee), Bangkok</p>
-                                <div class="rating-wrapper">
-                                    <div class="rating-item">
-                                        <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="3.5" />
-                                    </div>
-                                    <span class="texting"> (27 reviews)</span>
-                                </div>
-                                <p class="cuisine">Cuisine: <span>Italian</span> <span>Seafood</span> <span>Bistro</span></p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
+        @await  Component.InvokeAsync("YouMayAlsoLike")
 
     </div>
 
