[ADD] Добавление компонента ThisPlaceOverview

--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -644,7 +644,8 @@
 
                     <div class="submite-list-box">
 
-                        <div id="file-submit" class="dropzone">
+                        <div id="file-submit" class="dropzone dz-clickable">
+                            
                             <input name="file" type="file" multiple>
                             <div class="dz-default dz-message"><span>Click or Drop Images Here</span></div>
                         </div>
