Revert "[ADD] Добавление компонента ThisPlaceOverview"
This reverts commit 7a85f8231c0fbea479feb5a59149aff7667cc687.

--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -644,8 +644,7 @@
 
                     <div class="submite-list-box">
 
-                        <div id="file-submit" class="dropzone dz-clickable">
-                            
+                        <div id="file-submit" class="dropzone">
                             <input name="file" type="file" multiple>
                             <div class="dz-default dz-message"><span>Click or Drop Images Here</span></div>
                         </div>
