--- a/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
@@ -11,67 +11,10 @@
             <div id="navbar" class="collapse navbar-collapse navbar-arrow pull-left">
                 <ul class="nav navbar-nav" id="responsive-menu">
                     <li>
-                        <a href="#">Home</a>
                         <ul>
-                            <li>
-                                <a href="#">Shorter Hero</a>
-                                <ul>
-                                    <li><a href="index-1.html">Index Shorter Hero - 01</a></li>
-                                    <li><a href="index-kenburn-slider.html">Index Shorter Hero - 02</a></li>
-                                    <li><a href="index-video.html">Index Shorter Hero - 03</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Higher Hero</a>
-                                <ul>
-                                    <li><a href="index-higher-hero.html">Index Higher Hero - 01</a></li>
-                                    <li><a href="index-higher-hero-kenburn-slider.html">Index Higher Hero - 02</a></li>
-                                    <li><a href="index-higher-hero-video.html">Index Higher Hero - 03</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Align Center</a>
-                                <ul>
-                                    <li><a href="index-align-center.html">Index Align Center - 01</a></li>
-                                    <li><a href="index-align-center-banner-slider.html">Index Align Center - 02</a></li>
-                                    <li><a href="index-align-center-higher-hero.html">Index Align Center - 03</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Other Hero Variants</a>
-                                <ul>
-                                    <li><a href="index-alt-search-form-top-right.html">Index Hero Variants - 01</a></li>
-                                    <li><a href="index-banner-slider.html">Index Hero Variants - 02</a></li>
-                                    <li><a href="index-banner-slider-caption-center.html">Index Hero Variants - 03</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Transparent Header</a>
-                                <ul>
-                                    <li><a href="index-transparent-header.html">Index Transparent Header - 01</a></li>
-                                    <li><a href="index-transparent-header-align-center.html">Index Transparent Header - 02</a></li>
-                                    <li><a href="index-transparent-header-align-center-banner-slider.html">Index Transparent Header - 03</a></li>
-                                    <li><a href="index-transparent-header-banner-slider.html">Index Transparent Header - 04</a></li>
-                                    <li><a href="index-transparent-header-higher-hero.html">Index Transparent Header - 05</a></li>
-                                    <li><a href="index-transparent-header-kenburn-slider.html">Index Transparent Header - 06</a></li>
-                                    <li><a href="index-transparent-header-kenburn-slider-higher-hero.html">Index Transparent Header - 07</a></li>
-                                    <li><a href="index-transparent-header-video.html">Index Transparent Header - 08</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Different Layouts</a>
-                                <ul>
-                                    <li><a href="index-layout-1.html">Index Layout - 01</a></li>
-                                    <li><a href="index-layout-2.html">Index Layout - 02</a></li>
-                                    <li><a href="index-layout-3.html">Index Layout - 03</a></li>
-                                    <li><a href="index-layout-4.html">Index Layout - 04</a></li>
-                                    <li><a href="index-layout-5.html">Index Layout - 05</a></li>
-                                    <li><a href="index-layout-6.html">Index Layout - 06</a></li>
-                                    <li><a href="index-layout-7.html">Index Layout - 07</a></li>
-                                    <li><a href="index-layout-8.html">Index Layout - 08</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="index-boxed.html">Home Style Boxed</a></li>
+                            <li><a href="@Url.Action("Index", "Home")">Головна</a></li>
+                            <li><a href="@Url.Action("Places", "Home")">Ресторани</a></li>
+                            <li><a href="@Url.Action("NewPlace", "Home")">Додати ресторан</a></li>
                         </ul>
                     </li>
                     <li>
