--- a/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
@@ -5,153 +5,14 @@
         <div class="header-inner navbar-default navbar-sticky">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand hidden-xs" href="index.html"><img src="images/logo.png" alt="Image" /></a>
-                    <a class="navbar-brand visible-xs" href="index.html"><img src="images/logo-xs.png" alt="Image" /></a>
+                    <a class="navbar-brand hidden-xs" href="@Url.Action("Index", "Home")"><img src="images/logo.png" alt="Image" /></a>
+                    <a class="navbar-brand visible-xs" href="@Url.Action("Index", "Home")"><img src="images/logo-xs.png" alt="Image" /></a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse navbar-arrow pull-left">
                     <ul class="nav navbar-nav" id="responsive-menu">
-                        <li>
-                            <a href="#">Home</a>
-                            <ul>
-                                <li>
-                                    <a href="#">Shorter Hero</a>
-                                    <ul>
-                                        <li><a href="index-1.html">Index Shorter Hero - 01</a></li>
-                                        <li><a href="index-kenburn-slider.html">Index Shorter Hero - 02</a></li>
-                                        <li><a href="index-video.html">Index Shorter Hero - 03</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Higher Hero</a>
-                                    <ul>
-                                        <li><a href="index-higher-hero.html">Index Higher Hero - 01</a></li>
-                                        <li><a href="index-higher-hero-kenburn-slider.html">Index Higher Hero - 02</a></li>
-                                        <li><a href="index-higher-hero-video.html">Index Higher Hero - 03</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Align Center</a>
-                                    <ul>
-                                        <li><a href="index-align-center.html">Index Align Center - 01</a></li>
-                                        <li><a href="index-align-center-banner-slider.html">Index Align Center - 02</a></li>
-                                        <li><a href="index-align-center-higher-hero.html">Index Align Center - 03</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Other Hero Variants</a>
-                                    <ul>
-                                        <li><a href="index-alt-search-form-top-right.html">Index Hero Variants - 01</a></li>
-                                        <li><a href="index-banner-slider.html">Index Hero Variants - 02</a></li>
-                                        <li><a href="index-banner-slider-caption-center.html">Index Hero Variants - 03</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Transparent Header</a>
-                                    <ul>
-                                        <li><a href="index-transparent-header.html">Index Transparent Header - 01</a></li>
-                                        <li><a href="index-transparent-header-align-center.html">Index Transparent Header - 02</a></li>
-                                        <li><a href="index-transparent-header-align-center-banner-slider.html">Index Transparent Header - 03</a></li>
-                                        <li><a href="index-transparent-header-banner-slider.html">Index Transparent Header - 04</a></li>
-                                        <li><a href="index-transparent-header-higher-hero.html">Index Transparent Header - 05</a></li>
-                                        <li><a href="index-transparent-header-kenburn-slider.html">Index Transparent Header - 06</a></li>
-                                        <li><a href="index-transparent-header-kenburn-slider-higher-hero.html">Index Transparent Header - 07</a></li>
-                                        <li><a href="index-transparent-header-video.html">Index Transparent Header - 08</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Different Layouts</a>
-                                    <ul>
-                                        <li><a href="index-layout-1.html">Index Layout - 01</a></li>
-                                        <li><a href="index-layout-2.html">Index Layout - 02</a></li>
-                                        <li><a href="index-layout-3.html">Index Layout - 03</a></li>
-                                        <li><a href="index-layout-4.html">Index Layout - 04</a></li>
-                                        <li><a href="index-layout-5.html">Index Layout - 05</a></li>
-                                        <li><a href="index-layout-6.html">Index Layout - 06</a></li>
-                                        <li><a href="index-layout-7.html">Index Layout - 07</a></li>
-                                        <li><a href="index-layout-8.html">Index Layout - 08</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="index-boxed.html">Home Style Boxed</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Restaurant</a>
-                            <ul>
-                                <li><a href="restuarant-result-grid.html">Restuarant Result - Grid</a></li>
-                                <li><a href="restuarant-result-list.html">Restuarant Result - List</a></li>
-                                <li>
-                                    <a href="restuarant-detail.html">Restuarant Detail</a>
-                                    <ul>
-                                        <li><a href="restuarant-detail-2.html">Restuarant Detail - 02</a></li>
-                                        <li><a href="restuarant-detail-3.html">Restuarant Detail - 03</a></li>
-                                        <li><a href="restuarant-detail-4.html">Restuarant Detail - 04</a></li>
-                                        <li><a href="restuarant-detail-5.html">Restuarant Detail - 05</a></li>
-                                        <li><a href="restuarant-detail-6.html">Restuarant Detail - 06</a></li>
-                                        <li><a href="restuarant-detail-7.html">Restuarant Detail - 07</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="restuarant-review.html">Restuarant Review</a></li>
-                                <li>
-                                    <a href="restuarant-reservation.html">Restuarant Reservation</a>
-                                    <ul>
-                                        <li><a href="restuarant-reservation-2.html">Restuarant Reservation - 02</a></li>
-                                        <li><a href="restuarant-reservation-3.html">Restuarant Reservation - 03</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="restuarant-reservation-success.html">Restuarant Reservation Success</a></li>
-                                <li>
-                                    <a href="restuarant-submit.html">Restuarant Submit</a>
-                                    <ul>
-                                        <li><a href="restuarant-submit-2.html">Restuarant Submit - 02</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Boxed Width</a>
-                                    <ul>
-                                        <li><a href="restuarant-result-grid-boxed.html">Restuarant Result - Grid</a></li>
-                                        <li><a href="restuarant-result-list-boxed.html">Restuarant Result - List</a></li>
-                                        <li><a href="restuarant-detail-boxed.html">Restuarant Detail</a></li>
-                                        <li><a href="restuarant-review-boxed.html">Restuarant Review</a></li>
-                                        <li><a href="restuarant-detail-boxed.html">Restuarant Reservation</a></li>
-                                        <li><a href="restuarant-submit-boxed.html">Restuarant Submit</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="how-it-work.html">How it works</a></li>
-                        <li>
-                            <a href="#">Page</a>
-                            <ul>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-single.html">Blog Single</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="faq.html">Faq</a></li>
-                                <li><a href="static-page.html">Static Page</a></li>
-                                <li><a href="404-page.html">404 - Error Page</a></li>
-                                <li><a href="typography.html">Typography</a></li>
-                                <li><a href="element.html">Element</a></li>
-                                <li><a href="component.html">Component</a></li>
-                                <li>
-                                    <a href="#">Layout</a>
-                                    <ul>
-                                        <li><a href="layout-full-width.html">Full wdth</a></li>
-                                        <li><a href="layout-left-sidebar.html">Left Sidebar</a></li>
-                                        <li><a href="layout-right-sidebar.html">Right Sidebar</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Sub-menu</a>
-                                    <ul>
-                                        <li><a href="#">Sub-menu 2</a></li>
-                                        <li><a href="#">Sub-menu 2</a></li>
-                                        <li><a href="#">Sub-menu 2</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="@Url.Action("NewPlace", "Home")">List Your Restaurant</a></li>
+                        <li><a href="@Url.Action("Index", "Home")">Головна</a></li>
+                        <li><a href="@Url.Action("Places", "Home")">Ресторани</a></li>
+                        <li><a href="@Url.Action("NewPlace", "Home")">Додати ресторан</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
                 <div class="pull-right">
