--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -100,5 +100,18 @@
     [
         ['Bold', 'Italic', '-', 'NumberedList', 'BulletedList', '-', 'Link', 'Unlink', '-', 'About']
     ]});</script>
+
+<!-- JS for only submission page -->
+<script type="text/javascript" src="~/js/bootstrap3-wysihtml5.min.js"></script>
+<script type="text/javascript" src="~/js/bootstrap-tokenfield.js"></script>
+<script type="text/javascript" src="~/js/typeahead.bundle.min.js"></script>
+<script type="text/javascript" src="~/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="~/js/dropzone.min.js"></script>
+<script type="text/javascript" src="~/js/jquery.ui.timepicker.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="~/js/infobox.js"></script>
+<script type="text/javascript" src="~/js/richmarker-compiled.js"></script>
+<script type="text/javascript" src="~/js/customs-submit.js"></script>
+
 </body>
 </html>
