--- a/src/FlexTemplate/Views/Shared/_Layout.cshtml
+++ b/src/FlexTemplate/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
 <script type="text/javascript" src="~/js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="~/js/dropzone.min.js"></script>
 <script type="text/javascript" src="~/js/jquery.ui.timepicker.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyA131pKJXEK37nz0AuIZF-cDr5JPxLA-Qc&sensor=false"></script>
 <script type="text/javascript" src="~/js/infobox.js"></script>
 <script type="text/javascript" src="~/js/richmarker-compiled.js"></script>
 <script type="text/javascript" src="~/js/customs-submit.js"></script>
