--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShortAnimated.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShortAnimated.cshtml
@@ -19,8 +19,8 @@
 
         <div class="container">
 
-            <h1 tag="TitleFirstLabelCaption" contenteditable="true">@Model.Strings["TitleFirstLabelCaption"]</h1>
-            <p tag="SubtitleLabelCaption" contenteditable="true">@Model.Strings["SubtitleLabelCaption"]</p>
+            @Html.Raw(Model.Strings["TitleFirstLabelCaption"])
+            @Html.Raw(Model.Strings["SubtitleLabelCaption"])
 
             <div class="home-search-form mt-20-xs">
 
@@ -40,13 +40,13 @@
 
                     </div>
 
-                    <button class="btn btn-primary btn-form" tag="FindButtonCaption">@Model.Strings["FindButtonCaption"]</button>
+                    @Html.Raw(Model.Strings["FindButtonCaption"])
 
                 </form>
 
                 <div class="clear"></div>
 
-                <p class="around-you" tag="EndLabelCaption" contenteditable="true"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
+                @Html.Raw(Model.Strings["EndLabelCaption"])
 
             </div>
 
