--- a/src/FlexTemplate/Views/Home/Components/Search/LeftShort.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/Search/LeftShort.cshtml
@@ -5,8 +5,8 @@
 <div class="hero search-margin-top" style="background-image:url('@Model.Images.First()'); margin-top:-25px;">
     <div class="container">
 
-        <h1 tag="TitleFirstLabelCaption" contenteditable="true">@Model.Strings["TitleFirstLabelCaption"]</h1>
-        <p tag="SubtitleLabelCaption" contenteditable="true">@Model.Strings["SubtitleLabelCaption"]</p>
+        @Html.Raw(Model.Strings["TitleFirstLabelCaption"])
+        @Html.Raw(Model.Strings["SubtitleLabelCaption"])
 
         <div class="home-search-form">
 
@@ -26,13 +26,13 @@
 
                 </div>
 
-                <button class="btn btn-primary btn-form" tag="FindButtonCaption">@Model.Strings["FindButtonCaption"]</button>
+                @Html.Raw(Model.Strings["FindButtonCaption"])
 
             </form>
 
             <div class="clear"></div>
 
-            <p class="around-you" tag="EndLabelCaption" contenteditable="true"><a href="#">@Model.Strings["EndLabelCaption"]</a></p>
+            @Html.Raw(Model.Strings["EndLabelCaption"])
 
         </div>
 
