--- a/src/FlexTemplate/Views/Home/Components/ThisCityPlaces/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisCityPlaces/Default.cshtml
@@ -6,8 +6,8 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="section-title-02">
-                        <h3><span tag="TitleLabelCaption" contenteditable="true">@Model.Strings["TitleLabelCaption"]</span></h3>
-                        <p tag="SubtitleLabelCaption" contenteditable="true">@Model.Strings["SubtitleLabelCaption"]</p>
+                        <h3>@Html.Raw(Model.Strings["TitleLabelCaption"])</h3>
+                        @Html.Raw(Model.Strings["SubtitleLabelCaption"])
                     </div>
                 </div>
             </div>
@@ -20,7 +20,7 @@
                         }
                     </div>
                     <div class="text-center">
-                        <a href="#" class="btn btn-primary" tag="MorePlacesButtonCaption">@Model.Strings["MorePlacesButtonCaption"]</a>
+                        @Html.Raw(Model.Strings["MorePlacesButtonCaption"])
                     </div>
                 </div>
             </div>
